--- a/api.ipynb
+++ b/api.ipynb
@@ -1134,13 +1134,13 @@
        "      <th>totaltested</th>\n",
        "      <th>unconfirmed</th>\n",
        "      <th>updatedon</th>\n",
-       "      <th>_d88ul</th>\n",
        "      <th>_dkvya</th>\n",
+       "      <th>_dmair</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1195</th>\n",
+       "      <th>1209</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1164,7 +1164,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1196</th>\n",
+       "      <th>1210</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1188,26 +1188,26 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1197</th>\n",
+       "      <th>1211</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td>907</td>\n",
        "      <td></td>\n",
+       "      <td>392</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>2961</td>\n",
+       "      <td>https://www.wbhealth.gov.in/uploaded_files/cor...</td>\n",
        "      <td>...</td>\n",
+       "      <td>2.89%</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td>12482</td>\n",
+       "      <td>32112</td>\n",
+       "      <td>102282</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>20/05/2020</td>\n",
+       "      <td>19/05/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -1218,39 +1218,39 @@
       ],
       "text/plain": [
        "     coronaenquirycalls cumulativepeopleinquarantine negative  \\\n",
-       "1195                                                            \n",
-       "1196                                                            \n",
-       "1197                                                            \n",
+       "1209                                                            \n",
+       "1210                                                            \n",
+       "1211                                                            \n",
        "\n",
        "     numcallsstatehelpline numicubeds numisolationbeds numventilators  \\\n",
-       "1195                              907                             392   \n",
-       "1196                              907                             392   \n",
-       "1197                                                                    \n",
+       "1209                              907                             392   \n",
+       "1210                              907                             392   \n",
+       "1211                              907                             392   \n",
        "\n",
        "     populationncp2019projection positive  \\\n",
-       "1195                    96906000     2677   \n",
-       "1196                                 2825   \n",
-       "1197                                        \n",
+       "1209                    96906000     2677   \n",
+       "1210                                 2825   \n",
+       "1211                                 2961   \n",
        "\n",
        "                                                source1  ...  \\\n",
-       "1195  https://www.wbhealth.gov.in/uploaded_files/cor...  ...   \n",
-       "1196  https://www.wbhealth.gov.in/uploaded_files/cor...  ...   \n",
-       "1197                                                     ...   \n",
+       "1209  https://www.wbhealth.gov.in/uploaded_files/cor...  ...   \n",
+       "1210  https://www.wbhealth.gov.in/uploaded_files/cor...  ...   \n",
+       "1211  https://www.wbhealth.gov.in/uploaded_files/cor...  ...   \n",
        "\n",
        "     testpositivityrate testspermillion testsperthousand  \\\n",
-       "1195              3.11%             887             0.89   \n",
-       "1196              3.02%                                    \n",
-       "1197                                                       \n",
+       "1209              3.11%             887             0.89   \n",
+       "1210              3.02%                                    \n",
+       "1211              2.89%                                    \n",
        "\n",
        "     totalpeoplecurrentlyinquarantine totalpeoplereleasedfromquarantine  \\\n",
-       "1195                            10561                             27740   \n",
-       "1196                            11571                             29615   \n",
-       "1197                                                                      \n",
+       "1209                            10561                             27740   \n",
+       "1210                            11571                             29615   \n",
+       "1211                            12482                             32112   \n",
        "\n",
-       "     totaltested unconfirmed   updatedon _d88ul _dkvya  \n",
-       "1195       85956              17/05/2020    NaN    NaN  \n",
-       "1196       93570              18/05/2020    NaN    NaN  \n",
-       "1197                          20/05/2020    NaN    NaN  \n",
+       "     totaltested unconfirmed   updatedon _dkvya _dmair  \n",
+       "1209       85956              17/05/2020    NaN    NaN  \n",
+       "1210       93570              18/05/2020    NaN    NaN  \n",
+       "1211      102282              19/05/2020    NaN    NaN  \n",
        "\n",
        "[3 rows x 24 columns]"
       ]
@@ -1282,7 +1282,7 @@
        "       'source2', 'state', 'tagpeopleinquarantine', 'tagtotaltested',\n",
        "       'testpositivityrate', 'testspermillion', 'testsperthousand',\n",
        "       'totalpeoplecurrentlyinquarantine', 'totalpeoplereleasedfromquarantine',\n",
-       "       'totaltested', 'unconfirmed', 'updatedon', '_d88ul', '_dkvya'],\n",
+       "       'totaltested', 'unconfirmed', 'updatedon', '_dkvya', '_dmair'],\n",
        "      dtype='object')"
       ]
      },
@@ -1822,70 +1822,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>58886</td>\n",
-       "      <td>101283</td>\n",
-       "      <td>3157</td>\n",
-       "      <td>955</td>\n",
+       "      <td>61293</td>\n",
+       "      <td>106958</td>\n",
+       "      <td>3303</td>\n",
+       "      <td>477</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19/05/2020 10:24:22</td>\n",
-       "      <td>39234</td>\n",
+       "      <td>47</td>\n",
+       "      <td>20/05/2020 10:43:23</td>\n",
+       "      <td>42356</td>\n",
        "      <td>Total</td>\n",
        "      <td>TT</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>25372</td>\n",
-       "      <td>35058</td>\n",
-       "      <td>1249</td>\n",
+       "      <td>26172</td>\n",
+       "      <td>37136</td>\n",
+       "      <td>1325</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>18/05/2020 23:19:26</td>\n",
-       "      <td>8437</td>\n",
+       "      <td>19/05/2020 23:12:24</td>\n",
+       "      <td>9639</td>\n",
        "      <td>Maharashtra</td>\n",
        "      <td>MH</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7272</td>\n",
-       "      <td>11760</td>\n",
-       "      <td>82</td>\n",
+       "      <td>7468</td>\n",
+       "      <td>12448</td>\n",
+       "      <td>85</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>18/05/2020 19:44:25</td>\n",
-       "      <td>4406</td>\n",
+       "      <td>19/05/2020 20:11:24</td>\n",
+       "      <td>4895</td>\n",
        "      <td>Tamil Nadu</td>\n",
        "      <td>TN</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6248</td>\n",
-       "      <td>11746</td>\n",
-       "      <td>694</td>\n",
+       "      <td>6379</td>\n",
+       "      <td>12141</td>\n",
+       "      <td>719</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>18/05/2020 20:43:24</td>\n",
-       "      <td>4804</td>\n",
+       "      <td>19/05/2020 20:30:24</td>\n",
+       "      <td>5043</td>\n",
        "      <td>Gujarat</td>\n",
        "      <td>GJ</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5409</td>\n",
-       "      <td>10054</td>\n",
-       "      <td>160</td>\n",
+       "      <td>5638</td>\n",
+       "      <td>10554</td>\n",
+       "      <td>166</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>18/05/2020 10:03:23</td>\n",
-       "      <td>4485</td>\n",
+       "      <td>19/05/2020 13:33:24</td>\n",
+       "      <td>4750</td>\n",
        "      <td>Delhi</td>\n",
        "      <td>DL</td>\n",
        "      <td>[10-May]&lt;br&gt;\\n\\nDelhi will be releasing bullet...</td>\n",
@@ -1896,18 +1896,18 @@
       ],
       "text/plain": [
        "  active confirmed deaths deltaconfirmed deltadeaths deltarecovered  \\\n",
-       "0  58886    101283   3157            955           1              1   \n",
-       "1  25372     35058   1249              0           0              0   \n",
-       "2   7272     11760     82              0           0              0   \n",
-       "3   6248     11746    694              0           0              0   \n",
-       "4   5409     10054    160              0           0              0   \n",
+       "0  61293    106958   3303            477           1             47   \n",
+       "1  26172     37136   1325              0           0              0   \n",
+       "2   7468     12448     85              0           0              0   \n",
+       "3   6379     12141    719              0           0              0   \n",
+       "4   5638     10554    166              0           0              0   \n",
        "\n",
        "       lastupdatedtime recovered        state statecode  \\\n",
-       "0  19/05/2020 10:24:22     39234        Total        TT   \n",
-       "1  18/05/2020 23:19:26      8437  Maharashtra        MH   \n",
-       "2  18/05/2020 19:44:25      4406   Tamil Nadu        TN   \n",
-       "3  18/05/2020 20:43:24      4804      Gujarat        GJ   \n",
-       "4  18/05/2020 10:03:23      4485        Delhi        DL   \n",
+       "0  20/05/2020 10:43:23     42356        Total        TT   \n",
+       "1  19/05/2020 23:12:24      9639  Maharashtra        MH   \n",
+       "2  19/05/2020 20:11:24      4895   Tamil Nadu        TN   \n",
+       "3  19/05/2020 20:30:24      5043      Gujarat        GJ   \n",
+       "4  19/05/2020 13:33:24      4750        Delhi        DL   \n",
        "\n",
        "                                          statenotes  \n",
        "0                                                     \n",
@@ -1994,25 +1994,25 @@
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
        "      <td>TT</td>\n",
-       "      <td>19/05/2020 10:24:22</td>\n",
-       "      <td>101283</td>\n",
-       "      <td>58886</td>\n",
-       "      <td>3157</td>\n",
-       "      <td>39234</td>\n",
-       "      <td>955</td>\n",
+       "      <td>20/05/2020 10:43:23</td>\n",
+       "      <td>106958</td>\n",
+       "      <td>61293</td>\n",
+       "      <td>3303</td>\n",
+       "      <td>42356</td>\n",
+       "      <td>477</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>47</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
        "      <td>MH</td>\n",
-       "      <td>18/05/2020 23:19:26</td>\n",
-       "      <td>35058</td>\n",
-       "      <td>25372</td>\n",
-       "      <td>1249</td>\n",
-       "      <td>8437</td>\n",
+       "      <td>19/05/2020 23:12:24</td>\n",
+       "      <td>37136</td>\n",
+       "      <td>26172</td>\n",
+       "      <td>1325</td>\n",
+       "      <td>9639</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2022,11 +2022,11 @@
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
        "      <td>TN</td>\n",
-       "      <td>18/05/2020 19:44:25</td>\n",
-       "      <td>11760</td>\n",
-       "      <td>7272</td>\n",
-       "      <td>82</td>\n",
-       "      <td>4406</td>\n",
+       "      <td>19/05/2020 20:11:24</td>\n",
+       "      <td>12448</td>\n",
+       "      <td>7468</td>\n",
+       "      <td>85</td>\n",
+       "      <td>4895</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2036,11 +2036,11 @@
        "      <th>3</th>\n",
        "      <td>Gujarat</td>\n",
        "      <td>GJ</td>\n",
-       "      <td>18/05/2020 20:43:24</td>\n",
-       "      <td>11746</td>\n",
-       "      <td>6248</td>\n",
-       "      <td>694</td>\n",
-       "      <td>4804</td>\n",
+       "      <td>19/05/2020 20:30:24</td>\n",
+       "      <td>12141</td>\n",
+       "      <td>6379</td>\n",
+       "      <td>719</td>\n",
+       "      <td>5043</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2050,11 +2050,11 @@
        "      <th>4</th>\n",
        "      <td>Delhi</td>\n",
        "      <td>DL</td>\n",
-       "      <td>18/05/2020 10:03:23</td>\n",
-       "      <td>10054</td>\n",
-       "      <td>5409</td>\n",
-       "      <td>160</td>\n",
-       "      <td>4485</td>\n",
+       "      <td>19/05/2020 13:33:24</td>\n",
+       "      <td>10554</td>\n",
+       "      <td>5638</td>\n",
+       "      <td>166</td>\n",
+       "      <td>4750</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2066,18 +2066,18 @@
       ],
       "text/plain": [
        "         state statecode      lastupdatedtime confirmed active deaths  \\\n",
-       "0        Total        TT  19/05/2020 10:24:22    101283  58886   3157   \n",
-       "1  Maharashtra        MH  18/05/2020 23:19:26     35058  25372   1249   \n",
-       "2   Tamil Nadu        TN  18/05/2020 19:44:25     11760   7272     82   \n",
-       "3      Gujarat        GJ  18/05/2020 20:43:24     11746   6248    694   \n",
-       "4        Delhi        DL  18/05/2020 10:03:23     10054   5409    160   \n",
+       "0        Total        TT  20/05/2020 10:43:23    106958  61293   3303   \n",
+       "1  Maharashtra        MH  19/05/2020 23:12:24     37136  26172   1325   \n",
+       "2   Tamil Nadu        TN  19/05/2020 20:11:24     12448   7468     85   \n",
+       "3      Gujarat        GJ  19/05/2020 20:30:24     12141   6379    719   \n",
+       "4        Delhi        DL  19/05/2020 13:33:24     10554   5638    166   \n",
        "\n",
        "  recovered deltaconfirmed deltadeaths deltarecovered  \\\n",
-       "0     39234            955           1              1   \n",
-       "1      8437              0           0              0   \n",
-       "2      4406              0           0              0   \n",
-       "3      4804              0           0              0   \n",
-       "4      4485              0           0              0   \n",
+       "0     42356            477           1             47   \n",
+       "1      9639              0           0              0   \n",
+       "2      4895              0           0              0   \n",
+       "3      5043              0           0              0   \n",
+       "4      4750              0           0              0   \n",
        "\n",
        "                                          statenotes  \n",
        "0                                                     \n",
@@ -2629,11 +2629,11 @@
        "      <th>0</th>\n",
        "      <td>Unassigned</td>\n",
        "      <td></td>\n",
-       "      <td>814</td>\n",
-       "      <td>814</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>1096</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'confirmed': 814, 'deceased': 0, 'recovered': 0}</td>\n",
+       "      <td>{'confirmed': 282, 'deceased': 0, 'recovered': 0}</td>\n",
        "      <td>State Unassigned</td>\n",
        "      <td>UN</td>\n",
        "    </tr>\n",
@@ -2691,14 +2691,14 @@
       ],
       "text/plain": [
        "                   district notes  active  confirmed  deceased  recovered  \\\n",
-       "0                Unassigned           814        814         0          0   \n",
+       "0                Unassigned          1096       1096         0          0   \n",
        "0                  Nicobars             0          0         0          0   \n",
        "1  North and Middle Andaman             0          1         0          1   \n",
        "2             South Andaman             0         32         0         32   \n",
        "0                 Anantapur            45        122         4         73   \n",
        "\n",
        "                                               delta  \\\n",
-       "0  {'confirmed': 814, 'deceased': 0, 'recovered': 0}   \n",
+       "0  {'confirmed': 282, 'deceased': 0, 'recovered': 0}   \n",
        "0    {'confirmed': 0, 'deceased': 0, 'recovered': 0}   \n",
        "1    {'confirmed': 0, 'deceased': 0, 'recovered': 0}   \n",
        "2    {'confirmed': 0, 'deceased': 0, 'recovered': 0}   \n",
@@ -2812,11 +2812,11 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>814</td>\n",
-       "      <td>814</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>1096</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>814</td>\n",
+       "      <td>282</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
@@ -2890,7 +2890,7 @@
        "0               Andhra Pradesh         AP                 Anantapur   \n",
        "\n",
        "   confirmed  active  deceased  recovered  delta_confirmed  delta_deceased  \\\n",
-       "0        814     814         0          0              814               0   \n",
+       "0       1096    1096         0          0              282               0   \n",
        "0          0       0         0          0                0               0   \n",
        "1          1       0         0          1                0               0   \n",
        "2         32       0         0         32                0               0   \n",
