--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -1326,40 +1326,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1592</th>\n",
-       "      <td>2020-05-04</td>\n",
-       "      <td>Rajasthan</td>\n",
+       "      <th>1612</th>\n",
+       "      <td>2020-05-05</td>\n",
+       "      <td>Jharkhand</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1356</td>\n",
-       "      <td>27.0238</td>\n",
-       "      <td>74.2179</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23.6102</td>\n",
+       "      <td>85.2799</td>\n",
        "      <td>0</td>\n",
-       "      <td>2886</td>\n",
+       "      <td>115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2154</th>\n",
-       "      <td>2020-05-20</td>\n",
-       "      <td>Karnataka</td>\n",
+       "      <th>1315</th>\n",
+       "      <td>2020-04-26</td>\n",
+       "      <td>Bihar</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>571</td>\n",
-       "      <td>15.3173</td>\n",
-       "      <td>75.7139</td>\n",
+       "      <td>46</td>\n",
+       "      <td>25.0961</td>\n",
+       "      <td>85.3131</td>\n",
        "      <td>0</td>\n",
-       "      <td>1605</td>\n",
+       "      <td>243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>371</th>\n",
-       "      <td>2020-03-26</td>\n",
-       "      <td>Goa</td>\n",
-       "      <td>3</td>\n",
+       "      <th>935</th>\n",
+       "      <td>2020-04-14</td>\n",
+       "      <td>Kerala</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15.2993</td>\n",
-       "      <td>74.1240</td>\n",
+       "      <td>198</td>\n",
+       "      <td>10.8505</td>\n",
+       "      <td>76.2711</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>379</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1367,19 +1367,19 @@
       ],
       "text/plain": [
        "           Date Name of State / UT  Total Confirmed cases (Indian National)  \\\n",
-       "1592 2020-05-04          Rajasthan                                        0   \n",
-       "2154 2020-05-20          Karnataka                                        0   \n",
-       "371  2020-03-26                Goa                                        3   \n",
+       "1612 2020-05-05          Jharkhand                                        0   \n",
+       "1315 2020-04-26              Bihar                                        0   \n",
+       "935  2020-04-14             Kerala                                        0   \n",
        "\n",
        "      Total Confirmed cases ( Foreign National )  Cured/Discharged/Migrated  \\\n",
-       "1592                                           0                       1356   \n",
-       "2154                                           0                        571   \n",
-       "371                                            0                          0   \n",
+       "1612                                           0                         27   \n",
+       "1315                                           0                         46   \n",
+       "935                                            0                        198   \n",
        "\n",
        "      Latitude  Longitude  Death  Total Confirmed cases  \n",
-       "1592   27.0238    74.2179      0                   2886  \n",
-       "2154   15.3173    75.7139      0                   1605  \n",
-       "371    15.2993    74.1240      0                      3  "
+       "1612   23.6102    85.2799      0                    115  \n",
+       "1315   25.0961    85.3131      0                    243  \n",
+       "935    10.8505    76.2711      0                    379  "
       ]
      },
      "execution_count": 20,
@@ -1434,12 +1434,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save data in a csv file\n",
     "complete_data.to_csv('complete.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name of State / UT</th>\n",
+       "      <th>Total Confirmed cases (Indian National)</th>\n",
+       "      <th>Total Confirmed cases ( Foreign National )</th>\n",
+       "      <th>Cured/Discharged/Migrated</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Death</th>\n",
+       "      <th>Total Confirmed cases</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-31</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-01</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-02</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-03</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-18</th>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-19</th>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-20</th>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-24</th>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-26</th>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name of State / UT  Total Confirmed cases (Indian National)  \\\n",
+       "Date                                                                      \n",
+       "2020-01-30                   1                                        1   \n",
+       "2020-01-31                   1                                        1   \n",
+       "2020-02-01                   1                                        1   \n",
+       "2020-02-02                   1                                        1   \n",
+       "2020-02-03                   1                                        1   \n",
+       "...                        ...                                      ...   \n",
+       "2020-05-18                  33                                       33   \n",
+       "2020-05-19                  33                                       33   \n",
+       "2020-05-20                 132                                      132   \n",
+       "2020-05-24                  68                                       68   \n",
+       "2020-05-26                  35                                       35   \n",
+       "\n",
+       "            Total Confirmed cases ( Foreign National )  \\\n",
+       "Date                                                     \n",
+       "2020-01-30                                           1   \n",
+       "2020-01-31                                           1   \n",
+       "2020-02-01                                           1   \n",
+       "2020-02-02                                           1   \n",
+       "2020-02-03                                           1   \n",
+       "...                                                ...   \n",
+       "2020-05-18                                          33   \n",
+       "2020-05-19                                          33   \n",
+       "2020-05-20                                         132   \n",
+       "2020-05-24                                          68   \n",
+       "2020-05-26                                          35   \n",
+       "\n",
+       "            Cured/Discharged/Migrated  Latitude  Longitude  Death  \\\n",
+       "Date                                                                \n",
+       "2020-01-30                          1         1          1      1   \n",
+       "2020-01-31                          1         1          1      1   \n",
+       "2020-02-01                          1         1          1      1   \n",
+       "2020-02-02                          1         1          1      1   \n",
+       "2020-02-03                          1         1          1      1   \n",
+       "...                               ...       ...        ...    ...   \n",
+       "2020-05-18                         33        33         33     33   \n",
+       "2020-05-19                         33        33         33     33   \n",
+       "2020-05-20                        132       132        132    132   \n",
+       "2020-05-24                         68        68         68     68   \n",
+       "2020-05-26                         35        35         35     35   \n",
+       "\n",
+       "            Total Confirmed cases  \n",
+       "Date                               \n",
+       "2020-01-30                      1  \n",
+       "2020-01-31                      1  \n",
+       "2020-02-01                      1  \n",
+       "2020-02-02                      1  \n",
+       "2020-02-03                      1  \n",
+       "...                           ...  \n",
+       "2020-05-18                     33  \n",
+       "2020-05-19                     33  \n",
+       "2020-05-20                    132  \n",
+       "2020-05-24                     68  \n",
+       "2020-05-26                     35  \n",
+       "\n",
+       "[114 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_data.groupby('Date').count()"
    ]
   }
  ],
