--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -1326,60 +1326,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1612</th>\n",
-       "      <td>2020-05-05</td>\n",
-       "      <td>Jharkhand</td>\n",
+       "      <th>789</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Rajasthan</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>27</td>\n",
-       "      <td>23.6102</td>\n",
-       "      <td>85.2799</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27.0238</td>\n",
+       "      <td>74.2179</td>\n",
        "      <td>0</td>\n",
-       "      <td>115</td>\n",
+       "      <td>381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1315</th>\n",
-       "      <td>2020-04-26</td>\n",
-       "      <td>Bihar</td>\n",
+       "      <th>108</th>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>Uttar Pradesh</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>46</td>\n",
-       "      <td>25.0961</td>\n",
-       "      <td>85.3131</td>\n",
+       "      <td>26.8467</td>\n",
+       "      <td>80.9462</td>\n",
        "      <td>0</td>\n",
-       "      <td>243</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>935</th>\n",
-       "      <td>2020-04-14</td>\n",
-       "      <td>Kerala</td>\n",
+       "      <th>308</th>\n",
+       "      <td>2020-03-23</td>\n",
+       "      <td>Puducherry</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>198</td>\n",
-       "      <td>10.8505</td>\n",
-       "      <td>76.2711</td>\n",
+       "      <td>11.9416</td>\n",
+       "      <td>79.8083</td>\n",
        "      <td>0</td>\n",
-       "      <td>379</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date Name of State / UT  Total Confirmed cases (Indian National)  \\\n",
-       "1612 2020-05-05          Jharkhand                                        0   \n",
-       "1315 2020-04-26              Bihar                                        0   \n",
-       "935  2020-04-14             Kerala                                        0   \n",
+       "          Date Name of State / UT  Total Confirmed cases (Indian National)  \\\n",
+       "789 2020-04-09          Rajasthan                                        0   \n",
+       "108 2020-03-11      Uttar Pradesh                                        9   \n",
+       "308 2020-03-23         Puducherry                                        1   \n",
        "\n",
-       "      Total Confirmed cases ( Foreign National )  Cured/Discharged/Migrated  \\\n",
-       "1612                                           0                         27   \n",
-       "1315                                           0                         46   \n",
-       "935                                            0                        198   \n",
+       "     Total Confirmed cases ( Foreign National )  Cured/Discharged/Migrated  \\\n",
+       "789                                           0                         21   \n",
+       "108                                           0                          0   \n",
+       "308                                           0                          0   \n",
        "\n",
-       "      Latitude  Longitude  Death  Total Confirmed cases  \n",
-       "1612   23.6102    85.2799      0                    115  \n",
-       "1315   25.0961    85.3131      0                    243  \n",
-       "935    10.8505    76.2711      0                    379  "
+       "     Latitude  Longitude  Death  Total Confirmed cases  \n",
+       "789   27.0238    74.2179      0                    381  \n",
+       "108   26.8467    80.9462      0                      9  \n",
+       "308   11.9416    79.8083      0                      1  "
       ]
      },
      "execution_count": 20,
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-18</th>\n",
+       "      <th>2020-05-22</th>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
@@ -1575,7 +1575,7 @@
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-19</th>\n",
+       "      <th>2020-05-23</th>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
@@ -1584,28 +1584,28 @@
        "      <td>33</td>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-24</th>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
-       "      <td>68</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-25</th>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-05-26</th>\n",
@@ -1620,7 +1620,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>114 rows × 8 columns</p>\n",
+       "<p>118 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1632,10 +1632,10 @@
        "2020-02-02                   1                                        1   \n",
        "2020-02-03                   1                                        1   \n",
        "...                        ...                                      ...   \n",
-       "2020-05-18                  33                                       33   \n",
-       "2020-05-19                  33                                       33   \n",
-       "2020-05-20                 132                                      132   \n",
-       "2020-05-24                  68                                       68   \n",
+       "2020-05-22                  33                                       33   \n",
+       "2020-05-23                  33                                       33   \n",
+       "2020-05-24                  34                                       34   \n",
+       "2020-05-25                  34                                       34   \n",
        "2020-05-26                  35                                       35   \n",
        "\n",
        "            Total Confirmed cases ( Foreign National )  \\\n",
@@ -1646,10 +1646,10 @@
        "2020-02-02                                           1   \n",
        "2020-02-03                                           1   \n",
        "...                                                ...   \n",
-       "2020-05-18                                          33   \n",
-       "2020-05-19                                          33   \n",
-       "2020-05-20                                         132   \n",
-       "2020-05-24                                          68   \n",
+       "2020-05-22                                          33   \n",
+       "2020-05-23                                          33   \n",
+       "2020-05-24                                          34   \n",
+       "2020-05-25                                          34   \n",
        "2020-05-26                                          35   \n",
        "\n",
        "            Cured/Discharged/Migrated  Latitude  Longitude  Death  \\\n",
@@ -1660,10 +1660,10 @@
        "2020-02-02                          1         1          1      1   \n",
        "2020-02-03                          1         1          1      1   \n",
        "...                               ...       ...        ...    ...   \n",
-       "2020-05-18                         33        33         33     33   \n",
-       "2020-05-19                         33        33         33     33   \n",
-       "2020-05-20                        132       132        132    132   \n",
-       "2020-05-24                         68        68         68     68   \n",
+       "2020-05-22                         33        33         33     33   \n",
+       "2020-05-23                         33        33         33     33   \n",
+       "2020-05-24                         34        34         34     34   \n",
+       "2020-05-25                         34        34         34     34   \n",
        "2020-05-26                         35        35         35     35   \n",
        "\n",
        "            Total Confirmed cases  \n",
@@ -1674,22 +1674,249 @@
        "2020-02-02                      1  \n",
        "2020-02-03                      1  \n",
        "...                           ...  \n",
-       "2020-05-18                     33  \n",
-       "2020-05-19                     33  \n",
-       "2020-05-20                    132  \n",
-       "2020-05-24                     68  \n",
+       "2020-05-22                     33  \n",
+       "2020-05-23                     33  \n",
+       "2020-05-24                     34  \n",
+       "2020-05-25                     34  \n",
        "2020-05-26                     35  \n",
        "\n",
-       "[114 rows x 8 columns]"
+       "[118 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "complete_data.groupby('Date').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Name of State / UT</th>\n",
+       "      <th>Total Confirmed cases (Indian National)</th>\n",
+       "      <th>Total Confirmed cases ( Foreign National )</th>\n",
+       "      <th>Cured/Discharged/Migrated</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Death</th>\n",
+       "      <th>Total Confirmed cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2244</th>\n",
+       "      <td>2020-05-24</td>\n",
+       "      <td>Maharashtra</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13404</td>\n",
+       "      <td>19.7515</td>\n",
+       "      <td>75.7139</td>\n",
+       "      <td>1577</td>\n",
+       "      <td>47190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>2020-05-24</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6169</td>\n",
+       "      <td>22.2587</td>\n",
+       "      <td>71.1924</td>\n",
+       "      <td>829</td>\n",
+       "      <td>13664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2243</th>\n",
+       "      <td>2020-05-24</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3267</td>\n",
+       "      <td>22.9734</td>\n",
+       "      <td>78.6569</td>\n",
+       "      <td>281</td>\n",
+       "      <td>6371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2258</th>\n",
+       "      <td>2020-05-24</td>\n",
+       "      <td>West Bengal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1281</td>\n",
+       "      <td>22.9868</td>\n",
+       "      <td>87.8550</td>\n",
+       "      <td>269</td>\n",
+       "      <td>3459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2233</th>\n",
+       "      <td>2020-05-24</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6267</td>\n",
+       "      <td>28.7041</td>\n",
+       "      <td>77.1025</td>\n",
+       "      <td>231</td>\n",
+       "      <td>12910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>774</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22.2587</td>\n",
+       "      <td>71.1924</td>\n",
+       "      <td>0</td>\n",
+       "      <td>179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Haryana</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>29.0588</td>\n",
+       "      <td>76.0856</td>\n",
+       "      <td>0</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Himachal Pradesh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31.1048</td>\n",
+       "      <td>77.1734</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Jammu and Kashmir</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>33.7782</td>\n",
+       "      <td>76.5762</td>\n",
+       "      <td>0</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2327</th>\n",
+       "      <td>2020-05-26</td>\n",
+       "      <td>West Bengal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1414</td>\n",
+       "      <td>22.9868</td>\n",
+       "      <td>87.8550</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3816</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2320 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date Name of State / UT  Total Confirmed cases (Indian National)  \\\n",
+       "2244 2020-05-24        Maharashtra                                        0   \n",
+       "2235 2020-05-24            Gujarat                                        0   \n",
+       "2243 2020-05-24     Madhya Pradesh                                        0   \n",
+       "2258 2020-05-24        West Bengal                                        0   \n",
+       "2233 2020-05-24              Delhi                                        0   \n",
+       "...         ...                ...                                      ...   \n",
+       "774  2020-04-09            Gujarat                                        0   \n",
+       "775  2020-04-09            Haryana                                        0   \n",
+       "776  2020-04-09   Himachal Pradesh                                        0   \n",
+       "777  2020-04-09  Jammu and Kashmir                                        0   \n",
+       "2327 2020-05-26        West Bengal                                        0   \n",
+       "\n",
+       "      Total Confirmed cases ( Foreign National )  Cured/Discharged/Migrated  \\\n",
+       "2244                                           0                      13404   \n",
+       "2235                                           0                       6169   \n",
+       "2243                                           0                       3267   \n",
+       "2258                                           0                       1281   \n",
+       "2233                                           0                       6267   \n",
+       "...                                          ...                        ...   \n",
+       "774                                            0                         25   \n",
+       "775                                            0                         28   \n",
+       "776                                            0                          2   \n",
+       "777                                            0                          4   \n",
+       "2327                                           0                       1414   \n",
+       "\n",
+       "      Latitude  Longitude  Death  Total Confirmed cases  \n",
+       "2244   19.7515    75.7139   1577                  47190  \n",
+       "2235   22.2587    71.1924    829                  13664  \n",
+       "2243   22.9734    78.6569    281                   6371  \n",
+       "2258   22.9868    87.8550    269                   3459  \n",
+       "2233   28.7041    77.1025    231                  12910  \n",
+       "...        ...        ...    ...                    ...  \n",
+       "774    22.2587    71.1924      0                    179  \n",
+       "775    29.0588    76.0856      0                    147  \n",
+       "776    31.1048    77.1734      0                     18  \n",
+       "777    33.7782    76.5762      0                    158  \n",
+       "2327   22.9868    87.8550      0                   3816  \n",
+       "\n",
+       "[2320 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_data.sort_values('Death', ascending=False)"
    ]
   }
  ],
